--- a/index.pug
+++ b/index.pug
@@ -5,4 +5,12 @@ html(lang="en")
         meta(name="viewport", content="width=device-width, initial-scale=1.0")
         title Karim Hammadi's Portfolio
         link(rel="stylesheet", href="style.css")
-    body 
+    body
+        section
+            div 
+                h1 I LOVE YOU
+        section
+            div 
+        section
+            div 
+        
