added text to the three divs

--- a/index.pug
+++ b/index.pug
@@ -11,6 +11,7 @@ html(lang="en")
                 h1 I LOVE YOU
         section
             div 
+                h1 SO
         section
             div 
-        
+                h1 FUCKING MUCH
