--- a/style.css
+++ b/style.css
@@ -27,6 +27,10 @@ body {
   overflow:visible;
 }
 
+section {
+  background-color: blueviolet;
+}
+
 div {
   height: 100%;
   width: 100%;
@@ -34,5 +38,5 @@ div {
   color: blue;
   font-family: Mori;
   display: flex;
-  
+
 }
