--- a/index.pug
+++ b/index.pug
@@ -6,12 +6,6 @@ html(lang="en")
         title Karim Hammadi's Portfolio
         link(rel="stylesheet", href="style.css")
     body
-        section
-            div 
-                h1 I LOVE YOU
-        section
-            div 
-                h1 SO
-        section
-            div 
-                h1 FUCKING MUCH
+        .section section 1
+        .section section 2
+        .section section 3
