--- a/index.pug
+++ b/index.pug
@@ -13,7 +13,7 @@ html
       }
 
       body {
-        scroll-snap-type: y mandatory;
+        scroll-snap-type: proximity
         overflow-y: scroll;
       }
 
