--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ overflow-x: hidden; /* 👈 Prevent sideways scroll */
 }
 
 body {
-scroll-snap-type: y-mandatory;
+scroll-snap-type: y mandatory;
 overflow-y: scroll;
 }
 
