--- a/index.pug
+++ b/index.pug
@@ -37,7 +37,7 @@ html
         const countdownEl = document.getElementById('countdown');
 
         if (diff <= 0) {
-          countdownEl.innerHTML = "🎆 Happy 4th of July!";
+          countdownEl.innerHTML = "🎆 I love you!";
           clearInterval(timer);
           return;
         }
