--- a/index.pug
+++ b/index.pug
@@ -15,11 +15,15 @@ html
         color: #fff;
         font-family: sans-serif;
         font-size: 2rem;
-      }
+        }
       #countdown {
+        font-family: 'Arial', sans-serif;
+        font-size: 3rem;
+        color: #f0f0f0;
         text-align: center;
-        line-height: 2.5rem;
-      }
+        line-height: 3.5rem;
+        user-select: none;
+        }
 
   body
     #countdown
