short commit to modify the i love you message

--- a/index.pug
+++ b/index.pug
@@ -54,7 +54,7 @@ html
         const countdownEl = document.getElementById('countdown');
 
         if (diff <= 0) {
-          countdownEl.innerHTML = "🎆 I love you!";
+          countdownEl.innerHTML = "I love you!";
           clearInterval(timer);
           return;
         }
