--- a/style.css
+++ b/style.css
@@ -7,10 +7,18 @@ overflow-x: hidden; /* 👈 Prevent sideways scroll */
 }
 
 body {
-scroll-snap-type: y proximity;
-overflow-y: scroll;
-}
-
+    margin: 0;
+    padding: 0;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #111;
+    color: #fff;
+    font-family: sans-serif;
+    font-size: 2rem;
+    }
+      
 .section {
 height: 100vh;
 width: 100vw;
