--- a/index.pug
+++ b/index.pug
@@ -2,75 +2,7 @@ doctype html
 html
   head
     meta(charset="UTF-8")
-    title Countdown to July 4th
-    style.
-      body {
-        margin: 0;
-        padding: 0;
-        height: 100vh;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        background-color: #111;
-        color: #fff;
-        font-family: sans-serif;
-        font-size: 2rem;
-        }
-
-        @font-face {
-        font-family: 'PP Mori';
-        src: url('fonts\PPMori-SemiBold.woff2') format('woff2'),
-            url('fonts\PPMori-SemiBold.woff') format('woff');
-        font-weight: normal;
-        font-style: normal;
-        font-display: swap;
-        }
-
-        #countdown {
-        font-family: 'PP Mori', sans-serif;
-        }
-
-      #countdown {
-        font-size: 3rem;
-        color: #f0f0f0;
-        text-align: center;
-        line-height: 3.5rem;
-        user-select: none;
-        }
-
+    title Kim's storytime <3
   body
-    #countdown
-
-    script.
-      function pluralize(value, singular, plural) {
-        return value === 1 ? singular : plural;
-      }
-
-      const countdown = () => {
-        const targetDate = new Date('2025-07-04T12:00:00');
-        const now = new Date();
-        const diff = targetDate - now;
-
-        const countdownEl = document.getElementById('countdown');
-
-        if (diff <= 0) {
-          countdownEl.innerHTML = "I love you!";
-          clearInterval(timer);
-          return;
-        }
-
-        const seconds = Math.floor((diff / 1000) % 60);
-        const minutes = Math.floor((diff / 1000 / 60) % 60);
-        const hours = Math.floor((diff / (1000 * 60 * 60)) % 24);
-        const days = Math.floor(diff / (1000 * 60 * 60 * 24));
-
-        countdownEl.innerHTML = `
-          ${days} ${pluralize(days, 'Day', 'Days')}
-          ${hours.toString().padStart(2, '0')} ${pluralize(hours, 'Hour', 'Hours')}
-          ${minutes.toString().padStart(2, '0')} ${pluralize(minutes, 'Minute', 'Minutes')}
-          ${seconds.toString().padStart(2, '0')} ${pluralize(seconds, 'Second', 'Seconds')}
-        `;
-      };
-
-      const timer = setInterval(countdown, 1000);
-      countdown();
+    audio(controls)
+      source(src='tess.m4a' type='audio/mpeg')
