--- a/index.pug
+++ b/index.pug
@@ -2,7 +2,9 @@ doctype html
 html
   head
     meta(charset="UTF-8")
-    title Kim's storytime <3
+    title Kim's stooorytime <3
   body
+    audio(controls)
+      source(src='tess.m4a' type='audio/mpeg')
     audio(controls)
       source(src='tess.m4a' type='audio/mpeg')
