--- a/index.pug
+++ b/index.pug
@@ -2,9 +2,8 @@ doctype html
 html
   head
     meta(charset="UTF-8")
-    title Kim's stooorytime <3
+    title Kim's storytime <3
   body
     audio(controls)
-      source(src='tess.m4a' type='audio/mpeg')
-    audio(controls)
-      source(src='tess.m4a' type='audio/mpeg')
+      source(src='tesst.mp3' type='audio/mpeg')
+      | Your browser does not support the audio element.
