--- a/index.pug
+++ b/index.pug
@@ -4,6 +4,9 @@ html
     meta(charset="UTF-8")
     title Kim's storytime <3
   body
-    audio(controls)
-      source(src='tesst.mp3' type='audio/mpeg')
-      | Your browser does not support the audio element.
+    div 
+      h1 I love you so much
+      audio(controls)
+        source(src='tesst.mp3' type='audio/mpeg')
+        | Your browser does not support the audio element.
+      h2 Enjoy this my love
