clean dark mode and centered att

--- a/index.pug
+++ b/index.pug
@@ -4,9 +4,9 @@ html
     meta(charset="UTF-8")
     title Kim's storytime <3
   body
-    div 
-      h1 I love you so much
+    #audio-container 
+      h1 I love you so much Kim you're the best girl ever
       audio(controls)
         source(src='tesst.mp3' type='audio/mpeg')
         | Your browser does not support the audio element.
-      h2 Enjoy this my love
+      h2 I wish you a good night my cutie pie
