--- a/index.pug
+++ b/index.pug
@@ -3,6 +3,7 @@ html
   head
     meta(charset="UTF-8")
     title Kim's storytime <3
+    link(rel="stylesheet", href="style.css")
   body
     #audio-container 
       h1 I love you so much Kim you're the best girl ever
