--- a/index.pug
+++ b/index.pug
@@ -7,7 +7,7 @@ html
   body
     #audio-container 
       h1 I love you so much Kim you're the best girl ever
-      p The story of the tired moon
+      h3 The story of the tired moon
       audio(controls)
         source(src='TheStoryofthetiredmoon.mp3' type='audio/mpeg')
         | Your browser does not support the audio element.
