--- a/index.pug
+++ b/index.pug
@@ -12,3 +12,10 @@ html
         source(src='TheStoryofthetiredmoon.mp3' type='audio/mpeg')
         | Your browser does not support the audio element.
       h2 I wish you a good night my cutie pie
+    #audio-container 
+      h1 I love you so much Kim you're the best girl ever
+      h3 The story of the tired moon
+      audio(controls)
+        source(src='TheStoryofthetiredmoon.mp3' type='audio/mpeg')
+        | Your browser does not support the audio element.
+      h2 I wish you a good night my cutie pie
