--- a/index.pug
+++ b/index.pug
@@ -13,9 +13,9 @@ html
         | Your browser does not support the audio element.
       h2 I wish you a good night my cutie pie
     #audio-container 
-      h1 I love you so much Kim you're the best girl ever
-      h3 The story of the tired moon
+      h1 I love you so so much cutie I hope you slept well and that you don't feel too sick
+      h3 When Sunny went away
       audio(controls)
-        source(src='TheStoryofthetiredmoon.mp3' type='audio/mpeg')
+        source(src='WhenSunnyWentAway.mp3.mp3' type='audio/mpeg')
         | Your browser does not support the audio element.
-      h2 I wish you a good night my cutie pie
+      h2 See you tomorrow gorgeous I love you
