--- a/index.pug
+++ b/index.pug
@@ -16,6 +16,6 @@ html
       h1 I love you so so much cutie I hope you slept well and that you don't feel too sick
       h3 When Sunny went away
       audio(controls)
-        source(src='WhenSunnyWentAway.mp3.mp3' type='audio/mpeg')
+        source(src='WhenSunnyWentAway.mp3' type='audio/mpeg')
         | Your browser does not support the audio element.
       h2 See you tomorrow gorgeous I love you
