--- a/index.pug
+++ b/index.pug
@@ -5,17 +5,26 @@ html
     title Kim's storytime <3
     link(rel="stylesheet", href="style.css")
   body
-    #audio-container 
-      h1 I love you so much Kim you're the best girl ever
-      h3 The story of the tired moon
-      audio(controls)
-        source(src='TheStoryofthetiredmoon.mp3' type='audio/mpeg')
-        | Your browser does not support the audio element.
-      h2 I wish you a good night my cutie pie
-    #audio-container 
-      h1 I love you so so much cutie I hope you slept well and that you don't feel too sick
-      h3 When Sunny went away
-      audio(controls)
-        source(src='WhenSunnyWentAway.mp3' type='audio/mpeg')
-        | Your browser does not support the audio element.
-      h2 See you tomorrow gorgeous I love you
+    div
+      #audio-container 
+        h1 I love you so much Kim you're the best girl ever
+        h3 The story of the tired moon
+        audio(controls)
+          source(src='AUDIO\TheStoryofthetiredmoon.mp3' type='audio/mpeg')
+          | Your browser does not support the audio element.
+        h2 I wish you a good night my cutie pie
+      #audio-container 
+        h1 I love you so so much cutie I hope you slept well and that you don't feel too sick
+        h3 When Sunny went away
+        audio(controls)
+          source(src='AUDIO\WhenSunnyWentAway.mp3' type='audio/mpeg')
+          | Your browser does not support the audio element.
+        h2 See you tomorrow gorgeous I love you
+    div
+      #audio-container 
+        h1 I hope tomorrow you will wake up healthy, you're the best person to ever exist for me
+        h3 Richard the Meerkat and the Little Gecko
+        audio(controls)
+          source(src='TheStoryofthetiredmoon.mp3' type='audio/mpeg')
+          | Your browser does not support the audio element.
+        h2 I hope you'll enjoy this one as much as I love you
