--- a/index.pug
+++ b/index.pug
@@ -10,7 +10,7 @@ html
         h1 I love you so much Kim you're the best girl ever
         h3 The story of the tired moon
         audio(controls)
-          source(src='AUDIO\TheStoryofthetiredmoon.mp3' type='audio/mpeg')
+          source(src='AUDIO/TheStoryofthetiredmoon.mp3' type='audio/mpeg')
           | Your browser does not support the audio element.
         h2 I wish you a good night my cutie pie
       #audio-container 
@@ -27,4 +27,4 @@ html
         audio(controls)
           source(src='TheStoryofthetiredmoon.mp3' type='audio/mpeg')
           | Your browser does not support the audio element.
-        h2 I hope you'll enjoy this one as much as I love you
+        h2 I hope you'll enjoy this one as much as I love
