--- a/index.pug
+++ b/index.pug
@@ -17,7 +17,7 @@ html
         h1 I love you so so much cutie I hope you slept well and that you don't feel too sick
         h3 When Sunny went away
         audio(controls)
-          source(src='AUDIO\WhenSunnyWentAway.mp3' type='audio/mpeg')
+          source(src='AUDIO/WhenSunnyWentAway.mp3' type='audio/mpeg')
           | Your browser does not support the audio element.
         h2 See you tomorrow gorgeous I love you
     div
@@ -25,6 +25,6 @@ html
         h1 I hope tomorrow you will wake up healthy, you're the best person to ever exist for me
         h3 Richard the Meerkat and the Little Gecko
         audio(controls)
-          source(src='TheStoryofthetiredmoon.mp3' type='audio/mpeg')
+          source(src='AUDIO/Richardthemeerkatandthelittlegecko.mp3' type='audio/mpeg')
           | Your browser does not support the audio element.
         h2 I hope you'll enjoy this one as much as I love
