--- a/index.pug
+++ b/index.pug
@@ -7,7 +7,7 @@ html
   body
     div
       #audio-container 
-        h1 Oh no, the Leaves are Gone
+        h1 The rainbowfish + Oh no, the Leaves are Gone
         audio(controls)
           source(src='AUDIO/fallleave.mp3' type='audio/mpeg')
           | Your browser does not support the audio element.
