--- a/index.pug
+++ b/index.pug
@@ -15,7 +15,7 @@ html
         h1 I miss you so much
         h3 The bird girl
         audio(controls)
-          source(src='AAUDIO/junglebird.mp3' type='audio/mpeg')
+          source(src='AUDIO/junglebird.mp3' type='audio/mpeg')
           | Your browser does not support the audio element.
         h2 Didn't see you in school today that's why I believe tomorrow is school
       //-#audio-container 
