--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@
 body {
   height: 100vh;
   width: 100vw;
-  background-color: #4db9f8; /* deep dark gray */
+  background-color: #171d21; /* deep dark gray */
   color: #f0f0f0; /* light text for contrast */
   font-family: 'Arial', sans-serif;
   display: flex;
