--- a/index.pug
+++ b/index.pug
@@ -18,7 +18,7 @@ html
           source(src='AUDIO/junglebird.mp3' type='audio/mpeg')
           | Your browser does not support the audio element.
         h2 Didn't see you in school today that's why I believe tomorrow is school
-      //-#audio-container 
+      #audio-container 
         h1 I love you so so much cutie I hope you slept well and that you don't feel too sick
         h3 When Sunny went away
         audio(controls)
