three more stories

--- a/index.pug
+++ b/index.pug
@@ -25,14 +25,14 @@ html
           source(src='AUDIO/WhenSunnyWentAway.mp3' type='audio/mpeg')
           | Your browser does not support the audio element.
         h2 See you tomorrow gorgeous I love you
-      //-#audio-container 
+      #audio-container 
         h1 I hope tomorrow you will wake up healthy, you're the best person to ever exist for me
         h3 Richard the Meerkat and the Little Gecko
         audio(controls)
           source(src='AUDIO/Richardthemeerkatandthelittlegecko.mp3' type='audio/mpeg')
           | Your browser does not support the audio element.
         h2 I hope you'll enjoy this one as much as I love
-      //-#audio-container 
+      #audio-container 
         h1 I love you we can do it Kim
         h3 Princess Jessie and the Unicorn
         audio(controls)
