--- a/style.css
+++ b/style.css
@@ -1,6 +1,9 @@
 #ma {
   display: flex;
+  width: 100vw;
+  height: 100vh;
   justify-content: center;
+  flex-direction: column;
 }
 
 #audio-container {
