--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
   display: flex;
   width: 100vw;
   height: 100vh;
+  border: 1px solid black;
   justify-content: center;
   flex-direction: column;
 }
