--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
   width: 100vw;
   height: 100vh;
   border: 1px solid black;
+  overflow: auto;
   justify-content: center;
   flex-direction: column;
 }
