--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+body{
+  background-color: #171d21;
+}
+
+
 #ma {
   display: flex;
   width: 100vw;
@@ -10,7 +15,7 @@
 
 #audio-container {
   height: 200px;
-  width: 200px;
+  width: 100%;
   background-color: #0071FF;
   font-size: 10pt;
 }
