--- a/style.css
+++ b/style.css
@@ -15,8 +15,13 @@ body{
 }
 
 #audio-container {
-  height: 200px;
-  width: 100%;
-  background-color: #171d21;
-  font-size: 10pt;
+  text-align: center;
+  margin: 10px;
+  padding: 1rem;
+  width: 50%;
+  height: 50%;
+  display:flex;
+  background-color: #1e1e1e;
+  border-radius: 12px;
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
 }
