--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ body{
   text-align: center;
   margin: 10px;
   padding: 1rem;
-  width: 50%;
+  width: 100%;
   height: 50%;
   display: flex;
   flex-direction: column;
@@ -29,5 +29,5 @@ body{
 }
 
 audio {
-  overflow: visible;
+  overflow: hidden;
 }
