--- a/index.pug
+++ b/index.pug
@@ -5,7 +5,7 @@ html
     title Kim's storytime <3
     link(rel="stylesheet", href="style.css")
   body
-    #ma
+    #maindi
       #audio-container 
         h1 Search and Rescue Officer for the US Forest Service
         audio(controls)
