--- a/style.css
+++ b/style.css
@@ -11,7 +11,8 @@ body{
   overflow: auto;
   gap: 10px;
   justify-content: center;
-  flex-direction: column;
+  flex-direction:column;
+  align-items: center ;
 }
 
 #audio-container {
@@ -29,5 +30,5 @@ body{
 }
 
 audio {
-  overflow: hidden;
+  overflow: auto;
 }
