--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ body{
   height: 50%;
   display: flex;
   flex-direction: column;
-  overflow: auto;
+  overflow: hidden;
   background-color: #1e1e1e;
   border-radius: 12px;
   box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
