--- a/style.css
+++ b/style.css
@@ -10,7 +10,8 @@ body{
   border: 1px solid black;
   overflow: auto;
   gap: 10px;
-  justify-content: center;
+  justify-content: space-around;
+  align-items: center;
   flex-direction:column;
 }
 
