--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ body{
   gap: 10px;
   justify-content: space-around;
   align-items: center;
-  flex-direction:column;
+  flex-direction:row;
 }
 
 #audio-container {
