--- a/style.css
+++ b/style.css
@@ -3,8 +3,8 @@ body{
 }
 
 
-#maindi {
-  display: flex;
+#grid-container {
+  display: grid;
   width: 100vw;
   height: 100vh;
   border: 1px solid black;
