--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@ body{
 
 #grid-container {
   display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
   width: 100vw;
   height: 100vh;
   border: 1px solid black;
@@ -21,8 +22,6 @@ body{
   padding: 1rem;
   width: 30%;
   height: 100%;
-  display: flex;
-  flex-direction: column;
   overflow: hidden;
   background-color: #1e1e1e;
   border-radius: 12px;
