--- a/style.css
+++ b/style.css
@@ -5,7 +5,8 @@ body{
 
 #grid-container {
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
+  grid-auto-columns: 0.3vw;
+  grid-auto-rows: auto;
   width: 100vw;
   height: 100vh;
   border: 1px solid black;
@@ -18,9 +19,8 @@ body{
 
 #audio-container {
   text-align: center;
-  margin: 10px;
-  padding: 1rem;
-  width: 30%;
+  margin: 0px;
+  width: 100%;
   height: 100%;
   overflow: hidden;
   background-color: #1e1e1e;
