--- a/style.css
+++ b/style.css
@@ -19,7 +19,8 @@ body{
 
 #audio-container {
   text-align: center;
-  margin: 0px;
+  margin: 10px;
+  padding: 1rem;
   width: 100%;
   height: 100%;
   overflow: hidden;
