--- a/index.pug
+++ b/index.pug
@@ -5,45 +5,45 @@ html
     title Kim's storytime <3
     link(rel="stylesheet", href="style.css")
   body
-    #grid-container
-      #audio-container 
-        h1 Search and Rescue Officer for the US Forest Service
-        audio(controls)
+    .card-container
+      .card
+        h3 Search and Rescue Officer for the US Forest Service
+        button audio(controls)
           source(src='AUDIO/SAROfficer.mp3' type='audio/mpeg')
           | Your browser does not support the audio element.
-      #audio-container 
-        h1 Something went wrong with my heart transplant
+      .card
+        h3 Something went wrong with my heart transplant
         audio(controls)
           source(src='AUDIO/hearttransplant.mp3' type='audio/mpeg')
           | Your browser does not support the audio element.
-      #audio-container 
-        h1 The rainbowfish + Oh no, the Leaves are Gone
+      .card
+        h3 The rainbowfish + Oh no, the Leaves are Gone
         audio(controls)
           source(src='AUDIO/fallleave.mp3' type='audio/mpeg')
           | Your browser does not support the audio element.
-      #audio-container 
-        h1 I miss you so much
+      .card 
+        h3 I miss you so much
         h3 The bird girl
         audio(controls)
           source(src='AUDIO/junglebird.mp3' type='audio/mpeg')
           | Your browser does not support the audio element.
         h2 Didn't see you in school today that's why I believe tomorrow is school
-      #audio-container 
-        h1 I love you so so much cutie I hope you slept well and that you don't feel too sick
+      .card 
+        h3 I love you so so much cutie I hope you slept well and that you don't feel too sick
         h3 When Sunny went away
         audio(controls)
           source(src='AUDIO/WhenSunnyWentAway.mp3' type='audio/mpeg')
           | Your browser does not support the audio element.
         h2 See you tomorrow gorgeous I love you
-      #audio-container 
-        h1 I hope tomorrow you will wake up healthy, you're the best person to ever exist for me
+      .card 
+        h3 I hope tomorrow you will wake up healthy, you're the best person to ever exist for me
         h3 Richard the Meerkat and the Little Gecko
         audio(controls)
           source(src='AUDIO/Richardthemeerkatandthelittlegecko.mp3' type='audio/mpeg')
           | Your browser does not support the audio element.
         h2 I hope you'll enjoy this one as much as I love
-      #audio-container 
-        h1 I love you we can do it Kim
+      .card 
+        h3 I love you we can do it Kim
         h3 Princess Jessie and the Unicorn
         audio(controls)
           source(src='AUDIO/PrincessJessieandtheUnicorn.mp3' type='audio/mpeg')
