--- a/index.pug
+++ b/index.pug
@@ -8,7 +8,7 @@ html
     .card-container
       .card
         h3 Search and Rescue Officer for the US Forest Service
-        button audio(controls)
+        audio(controls)
           source(src='AUDIO/SAROfficer.mp3' type='audio/mpeg')
           | Your browser does not support the audio element.
       .card
