--- a/index.pug
+++ b/index.pug
@@ -7,6 +7,11 @@ html
   body
     .card-container
       .card
+        h3 Emergency alert Part1
+        audio(controls)
+          source(src='AUDIO/emergencyalert.mp3' type='audio/mpeg')
+          | Your browser does not support the audio element.
+      .card
         h3 Search and Rescue Officer for the US Forest Service
         audio(controls)
           source(src='AUDIO/SAROfficer.mp3' type='audio/mpeg')
